--- a/style.css
+++ b/style.css
@@ -4,5 +4,5 @@ body{
     background-color: #ffeaea;
     background : url('stuppy.png'); 
     background-repeat: no-repeat;
-    
+    background-position:bottom right;
 }
