--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     background-repeat: no-repeat;
     background-position:bottom right;
     background-size: 30%;
-    
+    padding: 0;
 }
 
 h1{
