--- a/style.css
+++ b/style.css
@@ -7,12 +7,15 @@ body{
     background-position:bottom right;
     background-size: 30%;
     padding: 0;
+    margin-top:0;
 }
 
 h1{
     text-align:center;
     background-color: #ff0000;
     color:#fff;
+    margin-top:0 ;
+    padding: 0;
 }
 
 h2{
