--- a/style.css
+++ b/style.css
@@ -6,15 +6,14 @@ body{
     background-repeat: no-repeat;
     background-position:bottom right;
     background-size: 30%;
-    padding-top: 1px; /* マージン相殺を防ぐための最小限の値 */
-    margin:0;
-}
+    margin-top:0;
+    padding-top: 0;}
 
 h1{
     text-align:center;
     background-color: #ff0000;
     color:#fff;
-    margin-top:0 ;
+    margin:0 ;
     padding: 0;
 }
 
