--- a/style.css
+++ b/style.css
@@ -124,3 +124,9 @@ button:hover{
   text-decoration: none !important;
   color: inherit !important;
 }
+
+
+#calendar .fc a {
+  text-decoration: none !important;
+  color: inherit !important;
+}
