--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ button:hover{
 .memberSet{
   margin-left : 50px;
   margin-right : 50px;
-  width : 80%;
+  width : 200px;
 }
 
 .memberSet label{
