--- a/style.css
+++ b/style.css
@@ -178,3 +178,14 @@ button:hover{
 .memberSet label{
   margin-top : 20px;
 }
+
+#reserve-status{
+  margin-left : 20px;
+}
+
+#reserve-status dl{
+  white-space: nowrap;
+}
+#reserve-status dt{
+  float: left;
+}
