--- a/style.css
+++ b/style.css
@@ -20,10 +20,9 @@ h1{
     
 }
 
-h2#schoolname{
-    padding-top:0;
-    margin-top:0;
-    text-align : right;
+#schoolname{
+    margin-left : 50px;
+    color:#000;
 }
 
 button.res{
