--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ button:hover{
 }
 
 .fc-daygrid-day-frame {
-  min-height: 55px;   /* セルの最小高さ */
-  height: 55px;       /* 固定高さにしたい場合 */
+  min-height: 50px;   /* セルの最小高さ */
+  height: 50px;       /* 固定高さにしたい場合 */
 }
 
 .fc-event-title {
@@ -62,7 +62,7 @@ button:hover{
 /* スマホ用 (幅600px以下) */
 @media (max-width: 600px) {
   .fc-daygrid-day-frame {
-    height: 55px;   /* スマホではさらに小さく */
+    height: 50px;   /* スマホではさらに小さく */
     overflow: hidden; /* イベントが多い場合はスクロールさせない */
   }
 
@@ -191,4 +191,8 @@ button:hover{
 
 #reserve-status dt{
   float: left;
+}
+
+footer{
+  text-align : center;
 }
